# AI-Verse

./: GEMINI.md  README.md  System_Architecture.md  application_logs.json  graph.py  main.py  process_flow.md  pyproject.toml  user_agent_info.txt
agents/: critic_reflector.py  executive_agent.py  market_analyst.py  profiler.py  roadmap_planner.py
frontend/: style.css
tests/: create_dummy_resume.py  test_critic_reflector_agent.py  test_executive_agent.py  test_graph.py  test_market_analyst_agent.py  test_profiler_agent.py  test_reddit_scraper.py  test_resume_parser.py  test_roadmap_planner_agent.py
tools/: reddit_scraper.py  resume_parser.py
